--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/google.accounts": "^0.0.11",
     "axios": "^1.4.0",
+    "gapi-script": "^1.2.0",
+    "google-auth-library": "^9.1.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.45.4",
     "react-pin-input-hook": "^1.0.9",
     "react-redux": "^8.1.2",
